--- a/cloud_deployment/requirements.txt
+++ b/cloud_deployment/requirements.txt
@@ -1,6 +1,8 @@
 # Core dependencies for cloud deployment
 flask>=2.3.0
 gunicorn>=21.0.0
+celery>=5.3.0
+redis>=4.6.0
 
 # AI and Video Processing
 openai>=1.0.0
@@ -21,6 +23,9 @@ pytube>=15.0.0
 requests>=2.31.0
 pandas>=2.0.0
 yt-dlp>=2023.7.6
+
+# Database
+sqlite3
 
 # Background tasks
 psutil>=5.9.0
