--- a/requirements-desktop.txt
+++ b/requirements-desktop.txt
@@ -1,26 +1,17 @@
-# Core dependencies for cloud deployment
-flask>=2.3.0
-gunicorn>=21.0.0
-
-# AI and Video Processing
+PyQt5>=5.15.4
 openai>=1.0.0
-openai-whisper>=20231117
+whisper>=1.1.10
+git+https://github.com/openai/whisper.git
 moviepy>=1.0.3
 ffmpeg-python>=0.2.0
-
-# YouTube API
 google-api-python-client>=2.100.0
 google-auth-oauthlib>=1.1.0
 google-auth-httplib2>=0.1.0
 oauth2client>=4.1.3
-
-# Utilities
 APScheduler>=3.10.1
 python-dotenv>=1.0.0
 pytube>=15.0.0
 requests>=2.31.0
 pandas>=2.0.0
+matplotlib>=3.7.0
 yt-dlp>=2023.7.6
-
-# Background tasks
-psutil>=5.9.0
